# robocopy-logs-parser

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs
src/: config.rs  main.rs  robocopy.rs
