[package]
name = "robocopy-logs-parser"
version = "0.1.0"
edition = "2021"
authors = ["Vlad Vasiliu"]
repository = "https://github.com/vladvasiliu/robocopy-logs-parser"
license = "BSD-3-Clause"
readme = "./README.md"
description = "A parser for Robocopy logs"
categories = ["parsing"]
keywords = ["robocopy", "logs", "logging"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"
encoding_rs_io = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
