[package]
name = "robocopy-logs-parser"
version = "0.1.0"
edition = "2021"
authors = ["Vlad Vasiliu"]
repository = "https://github.com/vladvasiliu/robocopy-logs-parser"
license = "BSD-3-Clause"
readme = "./README.md"
description = "A parser for Robocopy logs"
categories = ["parsing"]
keywords = ["robocopy", "logs", "logging"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3", features = ["cargo"] }
encoding_rs = "0.8"
encoding_rs_io = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies.clap]
features = ["deprecated"]
version = "3"

[profile.release]
lto = true
incremental = false
codegen-units = 1
panic = "abort"
strip = true
